проект рецепты (добавил необходимые библиотеки(Apache Commons,Swagger) использовал их в коде.